--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,7 @@
       { "argsIgnorePattern": "_" }
     ],
     "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": "off",
     "no-console": "off",
     "no-param-reassign": "off",
     "prettier/prettier": "error",
