--- a/backend/package.json
+++ b/backend/package.json
@@ -76,6 +76,7 @@
     "factory-girl": "^5.0.4",
     "faker": "^5.1.0",
     "jest": "^26.6.0",
+    "node-fetch": "2.6.12",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "supertest": "^5.0.0",
